@@ -1,7 +1,7 @@
 #!/bin/bash
 echo "source env files..."
 source service.env
-MEM_OPTS="-XX:+UseContainerSupport -XX:InitialRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:-UseAdaptiveSizePolicy"
+MEM_OPTS="-XX:+UseContainerSupport -XX:InitialRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:MaxRAMPercentage=75.0 -XX:-UseAdaptiveSizePolicy -Xloggc:/data/workspace/$MS_NAME/jvm/gc-%t.log -XX:+PrintTenuringDistribution -XX:+PrintGCDetails -XX:+PrintGCDateStamps"
 API_PORT=80
 
 echo "create log dir"
@@ -25,6 +25,7 @@ java_argv+=(
   "-Dbksvc=bk-ci-$MS_NAME"
   "-Dspring.cloud.kubernetes.config.sources[0].name=${RELEASE_NAME:-bkci}-${CHART_NAME:-bk-ci}-common"
   "-Dspring.cloud.kubernetes.config.sources[1].name=${RELEASE_NAME:-bkci}-${CHART_NAME:-bk-ci}-${MS_NAME}"
+  "-Dspring.main.allow-bean-definition-overriding=true"
   "-Dservice-suffix="
   "-Dspring.profiles.active=local,dev"
   "-Dspring.application.name=$MS_NAME"
